Articles added with a grid layout

--- a/CSS/bölüm-6/News-Site/index.html
+++ b/CSS/bölüm-6/News-Site/index.html
@@ -58,5 +58,92 @@
         </div>
       </div>
     </header>
+
+    <!-- main-articles -->
+    <section id="main-articles">
+      <div class="container">
+        <h2>Latest News</h2>
+        <div class="articles-container">
+          <article class="card">
+            <img src="img/img-1.webp" alt="" />
+            <div>
+              <div class="category bg-secondary">Sport</div>
+              <h3>
+                <a href="article.html">Lorem ipsum dolor sit amet.</a>
+              </h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Repellendus, eos neque in aliquid excepturi officiis.
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/img-2.webp" alt="" />
+            <div>
+              <div class="category bg-secondary">Economy</div>
+              <h3>
+                <a href="article.html">Lorem ipsum dolor sit amet.</a>
+              </h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Repellendus, eos neque in aliquid excepturi officiis.
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/img-3.webp" alt="" />
+            <div>
+              <div class="category bg-secondary">Healt</div>
+              <h3>
+                <a href="article.html">Lorem ipsum dolor sit amet.</a>
+              </h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Repellendus, eos neque in aliquid excepturi officiis.
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/img-1.webp" alt="" />
+            <div>
+              <div class="category bg-secondary">Sport</div>
+              <h3>
+                <a href="article.html">Lorem ipsum dolor sit amet.</a>
+              </h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Repellendus, eos neque in aliquid excepturi officiis.
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/img-2.webp" alt="" />
+            <div>
+              <div class="category bg-secondary">Healt</div>
+              <h3>
+                <a href="article.html">Lorem ipsum dolor sit amet.</a>
+              </h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Repellendus, eos neque in aliquid excepturi officiis.
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <img src="img/img-3.webp" alt="" />
+            <div>
+              <div class="category bg-secondary">Sport</div>
+              <h3>
+                <a href="article.html">Lorem ipsum dolor sit amet.</a>
+              </h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Repellendus, eos neque in aliquid excepturi officiis.
+              </p>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
