--- a/CSS/bölüm-6/News-Site/index.html
+++ b/CSS/bölüm-6/News-Site/index.html
@@ -60,7 +60,7 @@
     </header>
 
     <!-- main-articles -->
-    <section id="main-articles">
+    <section id="main-articles" class="py-2">
       <div class="container">
         <h2>Latest News</h2>
         <div class="articles-container">
@@ -145,5 +145,54 @@
         </div>
       </div>
     </section>
+
+    <!-- footer -->
+    <footer id="main-footer" class="py-2">
+      <div class="container footer-container">
+        <div>
+          <img src="img/logo.png" alt="" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro alias
+            magnam aperiam. Quos libero fuga deleniti aut, dolore odit suscipit.
+          </p>
+        </div>
+
+        <div>
+          <h3>Join Us</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam,
+            vitae?
+          </p>
+          <form action="">
+            <input type="email" name="" id="" placeholder="Enter Email" />
+            <input type="submit" value="Subscribe" class="btn btn-primary" />
+          </form>
+        </div>
+
+        <div>
+          <h3>Links</h3>
+          <ul>
+            <li><a href="">Help & Support</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <h3>Follow Us</h3>
+          <div>
+            <a href=""><i class="fab fa-facebook fa-2x"></i></a>
+            <a href=""><i class="fab fa-twitter fa-2x"></i></a>
+            <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+            <a href=""><i class="fab fa-youtube fa-2x"></i></a>
+          </div>
+        </div>
+
+        <div>
+          <p>Copyright &copy; 2024,All Rights Reserved</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
