news-site finished

--- a/CSS/bölüm-6/News-Site/index.html
+++ b/CSS/bölüm-6/News-Site/index.html
@@ -17,7 +17,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:768px)"
+      href="css/mobile.css"
+    />
     <title>News Site</title>
   </head>
   <body>
@@ -189,7 +193,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="">
           <p>Copyright &copy; 2024,All Rights Reserved</p>
         </div>
       </div>
