profile kısmı yapıldı

--- a/CSS/part-7/freelancer/public/index.html
+++ b/CSS/part-7/freelancer/public/index.html
@@ -11,6 +11,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
+
     <link rel="stylesheet" href="css/main.css" />
     <title>Document</title>
   </head>
@@ -59,6 +65,71 @@
           user-friendly solutions. If you need an impressive website or digital
           projects, feel free to reach out to me for collaboration.
         </p>
+        <div class="skills my-3">
+          <div>
+            <i class="devicon-html5-plain colored"></i>
+
+            <h3>HTML</h3>
+            <p>
+              Proficient in creating structured and semantic web content, using
+              the latest HTML5 standards to build responsive and accessible
+              websites.
+            </p>
+          </div>
+          <div>
+            <i class="devicon-css3-plain colored"></i>
+
+            <h3>CSS</h3>
+            <p>
+              Skilled in styling web pages with CSS, ensuring visually appealing
+              designs and responsive layouts across various devices.
+            </p>
+          </div>
+          <div>
+            <i class="devicon-javascript-plain colored"></i>
+
+            <h3>Javascript</h3>
+            <p>
+              Experienced in developing interactive and dynamic functionalities,
+              leveraging JavaScript to bring life to web applications and
+              improve user engagement.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="home__b" class="text-center py-2g">
+      <div class="container">
+        <h2 class="section-title">Profile</h2>
+        <div class="border-bottom"></div>
+        <p class="lead">
+          The array of tools and technologies I have utilized in my past
+          projects.
+        </p>
+        <div class="profile">
+          <i class="devicon-dot-net-plain-wordmark colored"></i>
+
+          <i class="devicon-postgresql-plain-wordmark colored"></i>
+
+          <i class="devicon-microsoftsqlserver-plain-wordmark colored"></i>
+
+          <i class="devicon-c-plain"></i>
+
+          <i class="devicon-csharp-plain colored"></i>
+
+          <i class="devicon-java-plain-wordmark colored"></i>
+
+          <i class="devicon-androidstudio-plain"></i>
+
+          <i class="devicon-flutter-plain colored"></i>
+
+          <i class="devicon-python-plain colored"></i>
+
+          <i class="devicon-git-plain colored"></i>
+
+          <i class="devicon-github-original colored"></i>
+        </div>
       </div>
     </section>
 
