footer ve section-c yapildi

--- a/CSS/part-7/freelancer/public/index.html
+++ b/CSS/part-7/freelancer/public/index.html
@@ -16,7 +16,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/main.css" />
     <title>Document</title>
   </head>
@@ -39,10 +45,12 @@
             <span
               class="typewrite"
               data-period="1000"
-              data-type='["Developer","Designer","Freelancer"]'
+              data-type='["Developer","Web Designer","Freelancer"]'
             ></span>
           </h1>
-          <a href="" class="btn-primary animate__animated animate__swing my-2"
+          <a
+            href="#home__a"
+            class="btn-primary animate__animated animate__swing my-2"
             >View My Profile</a
           >
         </div>
@@ -57,7 +65,7 @@
         <p class="lead">
           I am Yusuf Taha Kara, a final-year Computer Engineering student at
           Yildiz Technical University. With over 2 years of experience as a .NET
-          Programmer, I have developed accounting software for businesses.
+          Programmer, I have developed accounting software for accountants.
           Currently, I am focusing on web development using HTML, CSS, and
           Javascript. As a freelancer, I prioritize understanding clients' needs
           and providing them with the best solutions. I am eager to explore new
@@ -99,9 +107,10 @@
       </div>
     </section>
 
+    <!-- section b -->
     <section id="home__b" class="text-center py-2g">
       <div class="container">
-        <h2 class="section-title">Profile</h2>
+        <h2 class="section-title">Software Development Stack</h2>
         <div class="border-bottom"></div>
         <p class="lead">
           The array of tools and technologies I have utilized in my past
@@ -132,6 +141,119 @@
         </div>
       </div>
     </section>
+
+    <!-- section c -->
+    <section id="home__c" class="text-center py-2">
+      <div class="container">
+        <h2 class="section-title">Working Process</h2>
+        <div class="border-bottom"></div>
+        <p class="lead">
+          I manage my projects in four disciplined steps. In the first step, we
+          understand client needs and define project requirements. During the
+          design phase, we create detailed plans and technical architectures.
+          Throughout the development process, we maintain constant communication
+          and frequent code reviews. Finally, we obtain user approval and deploy
+          the project to the live environment before completion. By rigorously
+          following each step, I deliver successful and user-friendly projects
+          to my clients.
+        </p>
+        <div class="process">
+          <div>
+            <i class="fa-solid fa-list-check fa-4x process__icon my-2">
+              <div class="process__step">1</div>
+            </i>
+            <h3>Step 1</h3>
+
+            <ul>
+              <li>
+                Understanding client needs and defining project requirements.
+              </li>
+              <li>Establishing project goals, scope, timeline, and budget.</li>
+              <li>
+                Documenting a trackable plan for the project and regular
+                monitoring of progress.
+              </li>
+            </ul>
+          </div>
+          <div>
+            <i class="fas fa-pencil-ruler fa-4x process__icon my-2">
+              <div class="process__step">2</div></i
+            >
+            <h3>Step 2</h3>
+            <ul>
+              <li>
+                Creating a detailed design document, including user interface
+                (UI) and user experience (UX) design.
+              </li>
+              <li>Designing database schemas and creating the data model.</li>
+              <li>
+                Determining the technical architecture and selecting appropriate
+                technologies for development.
+              </li>
+            </ul>
+          </div>
+          <div>
+            <i class="fa-solid fa-code fa-4x process__icon my-2">
+              <div class="process__step">3</div></i
+            >
+            <h3>Step 3</h3>
+            <ul>
+              <li>
+                Coding and developing the application based on the design
+                document.
+              </li>
+              <li>
+                Implementing continuous integration and testing processes for
+                debugging and quality assurance.
+              </li>
+              <li>
+                Holding regular meetings with the client to demonstrate progress
+                and gather feedback.
+              </li>
+              <li>
+                Delivering the software in stages and conducting usability
+                tests.
+              </li>
+            </ul>
+          </div>
+          <div>
+            <i class="fas fa-check-circle fa-4x process__icon my-2">
+              <div class="process__step">4</div></i
+            >
+            <h3>Step 4</h3>
+            <ul>
+              <li>Conducting final tests and obtaining user approval.</li>
+              <li>
+                Deploying the project to the live environment and providing
+                support for user adoption.
+              </li>
+              <li>Providing training and documentation to the client.</li>
+              <li>
+                Completing the project as per success criteria and obtaining
+                client acceptance.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer id="main-footer">
+      <div class="footer-content container">
+        <p>Copyright &copy; 2023 All Rights Reserved</p>
+        <div class="social">
+          <a href="https://github.com/yusuftahakara19" target="_blank">
+            <i class="fab fa-brands fa-github fa-2x"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/yusuf-taha-kara-56b0b5231/"
+            target="_blank"
+          >
+            <i class="fab fa-brands fa-linkedin fa-2x"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/type-writer.js"></script>
