--- a/CSS/part-7/freelancer/public/projects.html
+++ b/CSS/part-7/freelancer/public/projects.html
@@ -27,6 +27,10 @@
       rel="stylesheet"
       href="../node_modules/owl.carousel/dist/assets/owl.carousel.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="../node_modules/lightbox2/dist/css/lightbox.css"
+    />
     <link rel="stylesheet" href="css/main.css" />
     <title>Document</title>
   </head>
@@ -46,6 +50,122 @@
       </div>
     </header>
 
+    <section id="projects" class="text-center py-2">
+      <div class="container">
+        <h2 class="section-title">My Projects</h2>
+        <div class="border-bottom"></div>
+        <div class="lead">Some of My Past Software Projects</div>
+
+        <div class="items">
+          <div class="item">
+            <div class="item__image">
+              <a href="img/work-2.jpeg" data-lightbox="image"
+                ><img src="img/work-2.jpeg" alt=""
+              /></a>
+            </div>
+            <div class="item__text">
+              <div class="item__text__wrap">
+                <p class="item__text__category">Web Development</p>
+                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item__image">
+              <a href="img/work-2.jpeg" data-lightbox="image"
+                ><img src="img/work-2.jpeg" alt=""
+              /></a>
+            </div>
+            <div class="item__text">
+              <div class="item__text__wrap">
+                <p class="item__text__category">Web Development</p>
+                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item__image">
+              <a href="img/work-3.jpeg" data-lightbox="image"
+                ><img src="img/work-3.jpeg" alt=""
+              /></a>
+            </div>
+            <div class="item__text">
+              <div class="item__text__wrap">
+                <p class="item__text__category">Web Development</p>
+                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item__image">
+              <a href="#"><img src="img/work-1.jpeg" alt="" /></a>
+            </div>
+            <div class="item__text">
+              <div class="item__text__wrap">
+                <p class="item__text__category">Web Development</p>
+                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item__image">
+              <a href="#"><img src="img/work-2.jpeg" alt="" /></a>
+            </div>
+            <div class="item__text">
+              <div class="item__text__wrap">
+                <p class="item__text__category">Web Development</p>
+                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item__image">
+              <a href="#"><img src="img/work-1.jpeg" alt="" /></a>
+            </div>
+            <div class="item__text">
+              <div class="item__text__wrap">
+                <p class="item__text__category">Web Development</p>
+                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item__image">
+              <a href="#"><img src="img/work-3.jpeg" alt="" /></a>
+            </div>
+            <div class="item__text">
+              <div class="item__text__wrap">
+                <p class="item__text__category">Web Development</p>
+                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item__image">
+              <a href="#"><img src="img/work-1.jpeg" alt="" /></a>
+            </div>
+            <div class="item__text">
+              <div class="item__text__wrap">
+                <p class="item__text__category">Web Development</p>
+                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item__image">
+              <a href="#"><img src="img/work-1.jpeg" alt="" /></a>
+            </div>
+            <div class="item__text">
+              <div class="item__text__wrap">
+                <p class="item__text__category">Web Development</p>
+                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer id="main-footer">
       <div class="footer-content container">
         <p>Copyright &copy; 2023 All Rights Reserved</p>
@@ -63,5 +183,6 @@
       </div>
     </footer>
     <script src="js/jquery.min.js"></script>
+    <script src="../node_modules/lightbox2/dist/css/lightbox.css"></script>
   </body>
 </html>
